<resources>
    <string name="app_name">Dicosaure</string>
    <string name="action_settings">Settings</string>

    <string name="begins_with">Begin with</string>
    <string name="contains">Contains</string>
    <string name="ends_with">End with</string>
    <string name="Word">Word</string>
    <string name="headword_only">Headword only</string>
    <string name="whole_word">Whole word</string>
    <string name="part_word">Part word</string>
    <string name="choose">Choose</string>
    <string name="allDico">All</string>
    <string name="choose_dictionary">Choose a dictionary</string>
    <string name="returnString">Return</string>
    <string name="title_activity_advanced_search_result">Advanced Search Result</string>

    <string name="csvexport_insertCSVname">Name of the CSV file :</string>
    <string name="csvexport_CSVname">CSV name</string>
    <string name="csvexport_export">Export</string>
    <string name="title_activity_csvexport">CSVExportActivity</string>
    <string name="nb_added_words">added words</string>
    <string name="csv_imported">CSV imported</string>
    <string name="updated_words">words updated</string>
    <string name="see_dico">See dico</string>
    <string name="available_csv_files">Available CSV files</string>
    <string name="dictionary_exported">Dictionary exported</string>
    <string name="success">Success</string>
    <string name="name_already_exists">The specified name already exists</string>
    <string name="already_exists">already exists.</string>
    <string name="error">Error</string>
    <string name="change_file_name">Change file name</string>

    <string name="jump_to">Jump to&#8230;</string>
    <string name="dictionary_name">Dictionary Name</string>
    <string name="add_dictionary">Add a dictionary</string>
    <string name="dictionary_not_added">Can\'t add this dictionary. Name already used.</string>
    <string name="dictionary_not_added_empty_string">Can\'t add this dictionary. Please fill all the fields.</string>
    <string name="dico_name_not_available">Can\'t choose this dictionary name. Name already used.</string>
    <string name="close_button">Close</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="deleted">" has been deleted."</string>
    <string name="created">" has been created."</string>
    <string name="updated">" has been updated."</string>
    <string name="rename_dictionary">Rename this dictionary</string>
    <string name="update_dictionary">Modify this dictionary</string>
    <string name="dictionary_renamed">Dictionary renamed.</string>
    <string name="dictionary_not_renamed">Can\'t rename this dictionary. Name already used.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_in">Search in</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="list_words_activity">List</string>
    <string name="details">Details</string>
    <string name="headword">HeadWord :</string>
    <string name="translation">Translation / Meaning :</string>
    <string name="note">Note :</string>
    <string name="notes_only">Notes only</string>
    <string name="translation_meaning_only">Translation/Meaning only</string>
    <string name="all_data">All of this</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="new_word">New word</string>
    <string name="dictionary_title">Dictionary :</string>
    <string name="dico_not_exists">This dictionary does not exists.</string>
    <string name="no_selected_dico">No dictionary selected.</string>

    <string name="import_csv">Import a csv</string>
    <string name="export_csv">Export this dictionary</string>
    <string name="add_word">Add a word</string>
    <string name="modify">Modify</string>
    <string name="undo">Undo</string>
    <string name="all_dictionaries">All Dictionaries</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="delete_selected">delete selected</string>
    <string name="delete_words">Delete words</string>
    <string name="delete_dictionary">Delete this dictionary</string>
    <string name="delete_word">Delete this word</string>
    <string name="cancel">Cancel</string>
    <string name="item">Item(s)</string>
    <string name="dictionary">dictionary</string>
    <string name="dictionaries">dictionaries</string>
    <string name="word">word</string>
    <string name="dictionary_inLang">Input language</string>
    <string name="dictionary_outLang">Output language</string>
    <string name="words">words</string>
    <string name="target_dico">Target dictionary</string>
    <string name="no_result">No result</string>
    <string name="clearHistory">Clear the history</string>
    <string name="historyCleared">The history has been cleared.</string>
    <string name="loadingWords">Loading more words.</string>
    <string name="loadingHistory">Loading more history.</string>
    <string name="exporting">Exporting</string>
    <string name="file_already_exists">File already exists</string>
    <string name="overwrite">Overwrite</string>
    <string name="export_progress">Export in progress</string>
    <string name="open_it">Open the csv</string>
    <string name="no_apps">No supported apps installed.</string>
    <string name="return_to_dictionaries">Back to dictionaries</string>
    <string name="change_directory">Change directory</string>
    <string name="directory">Directory :</string>
    <string name="before">Before :</string>
    <string name="after">After :</string>
    <string name="reset">Reset the search</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="title_activity_language">Language selection</string>
    <string name="version">Version 2.0</string>
    <string name="about_message">App created by Romain GUILMET, Antoine JOERG and Charlotte TOUCHARD.</string>
    <string name="about_message_update">App upgraded by Jeremy BEULE, Melissa BIGNOUX, Loic DUMAS, Pierrick GIULIANI, Thomas GRASSELLI, Kevin MARGUERITTE and Dorian VACHER.</string>
    <string name="all_rights_reserved">Gearoid O\'NEILL - All rights reserved.</string>
    <string name="from_csv">From a csv</string>
    <string name="import_progress">Import in progress</string>
    <string name="delete_progress">Delete in progress</string>

    <string name="see_updated">See updated words</string>
    <string name="maximum_translate">You can\'t add more than 5 translations.</string>
    <string name="translation_children">Translation</string>
    <string name="clear">Clear</string>
    <string name="oups">historyCleared</string>

    <string name="dictionary_capital"><u>Dictionary</u></string>
    <string name="word_capital"><u>Word</u></string>
    <string name="note_capital"><u>Note</u></string>
    <string name="translation_capital"><u>Translation</u></string>
    <string name="sound_capital"><u>Sound</u></string>
    <string name="play"><u>Play</u></string>
    <string name="no_note"><u>No note</u></string>
    <string name="record">Record</string>
    <string name="recording">Recording</string>
    <string name="error_picked_image">You haven\'t picked image</string>
    <string name="permission_error">You don\'t accept the permissions</string>
    <string name="add_translation">Add Translation</string>
    <string name="translation_success">The translation added with success</string>
    <string name="translation_error">The translation already exists</string>

    <string name="add_modify">Add/Modify</string>
    <string name="add_txt_img">Tap to add an image</string>
    <string name="modify_image">Modification of image</string>
    <string name="succes_create_word">Word succesfully added</string>
    <string name="succes_update_word">Word succesfully updated</string>
    <string name="what_do_you_want">What do you want to do ?</string>
    <string name="no_image">No image</string>
    <string name="headword_missing">Headword missing</string>
    <string name="from_internet">From Internet</string>

    <string name="loading">Loading...</string>
    <string name="downloading">Downloading...</string>
    <string name="msg_error_connection">No internet connectivity</string>
    <string name="retry_connection">Try again</string>
    <string name="download_dictionary">Download a dictionary</string>
    <string name="importing">Import in progress</string>
    <string name="end_import">Import done</string>
    <string name="access_API_impossible">Impossible to access the API</string>
</resources>
