<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/textViewVersionEN"
        android:layout_below="@+id/tool_bar"
        android:layout_alignLeft="@+id/textViewCreateEN"
        android:layout_alignStart="@+id/textViewCreateEN"
        android:layout_alignRight="@+id/textViewCreateEN"
        android:layout_alignEnd="@+id/textViewCreateEN"
        android:layout_marginTop="@dimen/edit_text_margin"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_message"
        android:id="@+id/textViewCreateEN"
        android:layout_below="@+id/textViewVersionEN"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginStart="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginEnd="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_message_update"
        android:id="@+id/textViewUpdateEN"
        android:layout_below="@+id/textViewCreateEN"
        android:layout_alignStart="@+id/textViewCreateEN"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/all_rights_reserved"
        android:id="@+id/textViewTutorEN"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_below="@+id/textViewUpdateEN"
        android:layout_alignLeft="@+id/textViewUpdateEN"
        android:layout_alignStart="@+id/textViewUpdateEN"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_alignParentStart="true" />

</RelativeLayout>