<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/global_layout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_layout">

        <include android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout"
        android:id="@+id/scrollView" >

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_word"
            app:rowCount="3"
            app:columnCount="1">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/info_word_layout"
                android:layout_margin="10dp"
                app:columnCount="2"
                app:rowCount="1">

                <android.support.v7.widget.GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_dictionary_word"
                    app:rowCount="8"
                    app:columnCount="1"
                    app:layout_columnWeight="0.5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/dictionary_capital"
                        android:id="@+id/title_dictionary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="EN -> FR"
                        android:id="@+id/edit_dictionary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/word_capital"
                        android:id="@+id/title_word"
                        android:paddingTop="10dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:lines="1"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/edit_word" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/translation_capital"
                        android:id="@+id/title_translation"
                        android:paddingTop="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_translation" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:id="@+id/add_translation"
                        android:onClick="add_translation" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:id="@+id/delete_translation"
                        android:onClick="remove_translation" />

                </android.support.v7.widget.GridLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_columnWeight="0.5">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/image_word"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:clickable="true"
                        android:onClick="loadImagefromGallery"
                        android:nestedScrollingEnabled="false"
                        android:layout_columnWeight="0.5"
                        android:cropToPadding="true"
                        android:src="@color/background_floating_material_light" />

                    <TextView
                        android:id="@+id/text_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignLeft="@+id/image_word"
                        android:layout_alignTop="@+id/image_word"
                        android:layout_alignRight="@+id/image_word"
                        android:layout_alignBottom="@+id/image_word"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:text="@string/add_txt_img"
                        android:textColor="#7d7878"
                        android:textStyle="bold"
                        android:typeface="sans" />

                </RelativeLayout>

            </android.support.v7.widget.GridLayout>

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/translation_layout"
                app:columnCount="1"
                app:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/note_capital"
                    android:id="@+id/title_note" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/edit_note" />
            </android.support.v7.widget.GridLayout>

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/sound_layout"
                app:columnCount="1"
                app:rowCount="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/sound_capital"
                    android:id="@+id/title_sound" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:columnCount="2"
                    app:rowCount="1">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/play"
                        android:id="@+id/play_button"
                        android:clickable="false"
                        android:enabled="false"
                        android:onClick="playRecord"
                        app:layout_columnWeight="0.5" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/record"
                        android:id="@+id/start_recording"
                        android:onClick="startRecording"
                        android:clickable="false"
                        app:layout_columnWeight="0.5" />
                </android.support.v7.widget.GridLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/delete"
                    android:id="@+id/delete_btn"
                    app:layout_gravity="center_horizontal"
                    android:onClick="removeSound" />

            </android.support.v7.widget.GridLayout>
        </android.support.v7.widget.GridLayout>
    </ScrollView>

</RelativeLayout>