<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/global_layout">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="1"
        app:rowCount="4"
        android:id="@+id/layout_word">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar_layout">

            <include android:id="@+id/tool_bar"
                layout="@layout/tool_bar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />
        </FrameLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:rowCount="1"
            android:layout_below="@id/layout_word"
            android:id="@+id/info_word_layout"
            android:layout_margin="10dp">

            <android.support.v7.widget.GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:columnCount="1"
                app:rowCount="6"
                app:layout_columnWeight="0.5"
                android:id="@+id/layout_dictionary_word">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/dictionary_capital"
                    android:id="@+id/title_dictionary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/edit_dictionary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/word_capital"
                    android:id="@+id/title_word"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/edit_word" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/translation_capital"
                    android:id="@+id/title_translation"
                    android:paddingTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_translation" />

            </android.support.v7.widget.GridLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_columnWeight="0.5">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_word"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:clickable="true"
                    android:nestedScrollingEnabled="false"
                    android:layout_columnWeight="0.5"
                    android:cropToPadding="true"
                    android:src="@color/background_floating_material_light"/>

                <TextView
                    android:id="@+id/text_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/image_word"
                    android:layout_alignTop="@+id/image_word"
                    android:layout_alignRight="@+id/image_word"
                    android:layout_alignBottom="@+id/image_word"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/no_image"
                    android:textColor="#7d7878"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </RelativeLayout>

        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_word"
            app:columnCount="1"
            app:rowCount="2"
            android:layout_margin="10dp"
            android:id="@+id/translation_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/note_capital"
                android:id="@+id/title_note" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/edit_note" />
        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="1"
            app:rowCount="2"
            android:layout_margin="10dp"
            android:id="@+id/sound_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sound_capital"
                android:id="@+id/title_sound" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:id="@+id/play_button"
                android:onClick="playRecord" />

        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.GridLayout>

</RelativeLayout>