<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchFragmentKot"
        android:id="@+id/search_fragment">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/headword"
            android:id="@+id/boutonsradio"
            android:layout_alignRight="@+id/endString"
            android:layout_alignEnd="@+id/endString"
            android:layout_alignLeft="@+id/endString"
            android:layout_alignStart="@+id/endString"
            android:layout_marginTop="10sp"
            android:gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part_word"
                android:id="@+id/part"
                android:checked="true"
                android:layout_marginRight="15sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole_word"
                android:id="@+id/whole" />

        </RadioGroup>

        <EditText
            android:id="@+id/beginString"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/textSize"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_search_black_18dp"
            android:drawableStart="@drawable/ic_search_black_18dp"
            android:editable="false"
            android:hint="@string/begins_with"
            android:inputType="textCapSentences|text"
            android:layout_below="@+id/boutonsradio"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginRight="@dimen/edit_text_margin"
            android:layout_marginLeft="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:imeOptions="flagNoExtractUi|actionNext" />

        <EditText
            android:id="@+id/middleString"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/textSize"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_search_black_18dp"
            android:drawableStart="@drawable/ic_search_black_18dp"
            android:editable="false"
            android:hint="@string/contains"
            android:inputType="textCapSentences|text"
            android:layout_below="@+id/beginString"
            android:layout_alignLeft="@+id/beginString"
            android:layout_alignStart="@+id/beginString"
            android:layout_alignRight="@+id/beginString"
            android:layout_alignEnd="@+id/beginString"
            android:imeOptions="flagNoExtractUi|actionNext"/>

        <EditText
            android:id="@+id/endString"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/textSize"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_search_black_18dp"
            android:drawableStart="@drawable/ic_search_black_18dp"
            android:editable="false"
            android:hint="@string/ends_with"
            android:layout_below="@+id/middleString"
            android:inputType="textCapSentences|text"
            android:layout_marginEnd="@dimen/edit_text_margin"
            android:layout_marginRight="@dimen/edit_text_margin"
            android:layout_marginLeft="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:imeOptions="flagNoExtractUi"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchin"
            android:layout_below="@+id/endString"
            android:layout_alignLeft="@+id/boutonsradio"
            android:layout_alignStart="@+id/boutonsradio"
            android:layout_alignRight="@+id/boutonsradio"
            android:layout_alignEnd="@+id/boutonsradio"
            android:focusable="false"
            android:inputType="text"
            android:textSize="@dimen/smallTextSize"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/targetDico"
            android:layout_below="@+id/searchin"
            android:layout_alignLeft="@+id/boutonsradio"
            android:layout_alignStart="@+id/boutonsradio"
            android:layout_alignRight="@+id/boutonsradio"
            android:layout_alignEnd="@+id/boutonsradio"
            android:focusable="false"
            android:inputType="text"
            android:textSize="@dimen/smallTextSize"/>

    </RelativeLayout>
</ScrollView>